--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
   <link
     href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
     rel="stylesheet">
+
+  <!-- <script src="/__/firebase/6.4.0/firebase-app.js"></script>
+  <script src="/__/firebase/6.4.0/firebase-auth.js"></script>
+  <script src="/__/firebase/6.4.0/firebase-storage.js"></script>
+  <script src="/__/firebase/6.4.0/firebase-messaging.js"></script>
+  <script src="/__/firebase/6.4.0/firebase-firestore.js"></script>
+  <script src="/__/firebase/6.4.0/firebase-performance.js"></script> -->
 
 </head>
 
